--- a/301-400/303.md
+++ b/301-400/303.md
@@ -6,7 +6,7 @@
 ****
 ### :pencil2:题目实例
 <a href="https://github.com/wuqinqiang/">
-​    <img src="https://github.com/wuqinqiang/Lettcode-php/blob/master/images/303.png">
+​    <img src="../images/303.png">
 </a> 
 ****
 
@@ -42,13 +42,6 @@
     * $ret_1 = $obj->sumRange($i, $j);
     */
 ```
-
-### 联系
-
-<a href="https://github.com/wuqinqiang/">
-​    <img src="https://github.com/wuqinqiang/Lettcode-php/blob/master/qrcode_for_gh_c194f9d4cdb1_430.jpg" width="150px" height="150px">
-</a> 
-   
     
     
     
