--- a/301-400/326.md
+++ b/301-400/326.md
@@ -6,7 +6,7 @@
 ****
 ### :pencil2:题目实例
 <a href="https://github.com/wuqinqiang/">
-​    <img src="https://github.com/wuqinqiang/Lettcode-php/blob/master/images/326.png">
+​    <img src="../images/326.png">
 </a> 
 ****
 
@@ -26,13 +26,6 @@
            return $is_power==$n;
        }
 ```
-
-### 联系
-
-<a href="https://github.com/wuqinqiang/">
-​    <img src="https://github.com/wuqinqiang/Lettcode-php/blob/master/qrcode_for_gh_c194f9d4cdb1_430.jpg" width="150px" height="150px">
-</a> 
-   
     
     
     
