--- a/301-400/342.md
+++ b/301-400/342.md
@@ -6,7 +6,7 @@
 ****
 ### :pencil2:题目实例
 <a href="https://github.com/wuqinqiang/">
-​    <img src="https://github.com/wuqinqiang/Lettcode-php/blob/master/images/342.png">
+​    <img src="../images/342.png">
 </a> 
 
 ### :pencil2:题目分析
@@ -36,11 +36,6 @@
         return $num>0 && !($num & ($num-1)) && ($num-1)%3==0;
     }
 ```
-### 联系
-
-<a href="https://github.com/wuqinqiang/">
-​    <img src="https://github.com/wuqinqiang/Lettcode-php/blob/master/qrcode_for_gh_c194f9d4cdb1_430.jpg" width="150px" height="150px">
-</a> 
    
     
     
