--- a/数据结构/二叉树(1).md
+++ b/数据结构/二叉树(1).md
@@ -2,7 +2,7 @@
 **吴亲库里 库里的深夜食堂**
 
 <a href="https://github.com/wuqinqiang/">
-​    <img src="https://github.com/wuqinqiang/Lettcode-php/blob/master/images/twoTree.jpeg">
+​    <img src="../images/twoTree.jpeg">
 </a> 
 
 ### :pencil2:一.二叉树的定义
@@ -10,7 +10,7 @@
 ### :pencil2:二叉树的表现形态
 
 <a href="https://github.com/wuqinqiang/">
-​    <img src="https://github.com/wuqinqiang/Lettcode-php/blob/master/images/treeShow.jpg">
+​    <img src="..//images/treeShow.jpg">
 </a> 
 
 **1.满二叉树:棵深度为k有且有2^k-1结点的树称之为满二叉树，比如图中的a(深度为4,拥有15个结点)。这里我们就可以得到二叉树的一个特性:在二叉树的第i层中至多有2^i-1个结点(i>=1)。当然了他不止这一个特性。。。**
@@ -22,13 +22,13 @@
 ### :pencil2:三.二叉树的存储
 
 <a href="https://github.com/wuqinqiang/">
-​    <img src="https://github.com/wuqinqiang/Lettcode-php/blob/master/images/arrayTree.jpeg">
+​    <img src="../images/arrayTree.jpeg">
 </a> 
 
 **按照顺序存储的结构。用一组连续的存储单元至上而下，至左到右存储，图中的0表示不存在该结点，每一个不存在的点我们都需要浪费一个空间。所以在最坏的情况下，一个深度为k且只有k个结点的单支树(树中不存在度为2的结点)却需要长度为2^k-1的一维数组。所以这种顺序存储适合完全二叉树。**
 
 <a href="https://github.com/wuqinqiang/">
-​    <img src="https://github.com/wuqinqiang/Lettcode-php/blob/master/images/listTree.jpeg">
+​    <img src="../images/listTree.jpeg">
 </a> 
 
 **链式存储的结构是由一个数据元素和分别指向其左右子树的两个分支构成。包含了三个域：数据域,左右指针域。链表的头指向树的根节点。**
@@ -96,7 +96,7 @@ $treeA->right=$treeC;
 **我主要说明一下删除操作，删除操作主要分三种情况:(1)如果待删除结点中，只有一个左子结点，那么只要把待删除结点的父结点的left指向待删除结点的左子结点。(2)如果待删除结点只有一个右子结点，那么只要把带删除结点的父结点的right指向带删除结点的右子结点。(3)如果待删除结点有左右结点，那么需要找到这个结点右子树中最小的结点，把他替换到待删除的结点上面。**
 
  <a href="https://github.com/wuqinqiang/">
- ​    <img src="https://github.com/wuqinqiang/Lettcode-php/blob/master/images/deleteTree.jpg">
+ ​    <img src="../images/deleteTree.jpg">
  </a> 
 
 ```php
@@ -217,16 +217,6 @@ $sortTree->insertTree(4);
 //$sortTree->deleteTree(8);
 //var_dump($sortTree->getTree());
 ```
-
-
-
-### 联系
-
-<a href="https://github.com/wuqinqiang/">
-​    <img src="https://github.com/wuqinqiang/Lettcode-php/blob/master/qrcode_for_gh_c194f9d4cdb1_430.jpg" width="150px" height="150px">
-</a> 
-   
-    
     
     
 
