--- a/301-400/337.md
+++ b/301-400/337.md
@@ -1,15 +1,15 @@
-## :pencil2:Leetcode之PHP版题目解析（337. House Robber III）
+## Leetcode之PHP版题目解析（337. House Robber III）
 **2019-04-21 吴亲库里 库里的深夜食堂**
 ****
-### :pencil2:描述
+### 描述
  **最后的目的还是为了算出最多能抢的金额数。除了根节点，每一个结点只有一个父结点，能直接相连的两个结点不能同时抢，比如说图1这种情况，你要是抢了根节点，那么直接相连的左右子结点你就不能抢。所以你要么抢根节点的左右子结点，要么根节点+根节点->left->right+根节点->right->right.**
 ****
-### :pencil2:题目实例
+### 题目实例
 <a href="https://github.com/wuqinqiang/">
-​    <img src="https://github.com/wuqinqiang/Lettcode-php/blob/master/images/337.png">
+​    <img src="../images/337.png">
 </a> 
 
-### :pencil2:题目分析
+### 题目分析
 **第一种解就是我说的，两种情况之间的比较，递归的调用，如果当前结点的左结点存在，算出不包含左右结点的值，如果右结点存在，算出不包含左右结点的值，然后加上当前结点。第二种就是算出不包含当前结点的左右结点的和，然后取最大的。但是这里存在很大的弊端，看代码。**
 
 ****
@@ -64,13 +64,5 @@
         return max($root->val+$ll+$lr+$rl+$rr,$l+$r);
     }
 ```
-### 联系
-
-<a href="https://github.com/wuqinqiang/">
-​    <img src="https://github.com/wuqinqiang/Lettcode-php/blob/master/qrcode_for_gh_c194f9d4cdb1_430.jpg" width="150px" height="150px">
-</a> 
-   
-    
-    
     
 
